--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/sitemap": "^7.5.2",
     "lucide-vue-next": "^0.556.0",
     "nuxt": "^4.2.1",
     "vue": "^3.5.25",
