--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@nuxtjs/sitemap": "^7.5.2",
     "lucide-vue-next": "^0.556.0",
     "nuxt": "^4.2.1",
+    "resend": "^6.9.0",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@types/node": "^25.0.10",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18"
